<resources>
    <string name="app_name">Recibo de Nómina</string>
    <string name="iniciar">Iniciar</string>
    <string name="titulo_recibo">Recibo de Nómina</string>
    <string name="num_recibo_default">Número de recibo:</string>
    <string name="num_recibo">Número de recibo: </string>
    <string name="nombre_empleado_default">Nombre:</string>
    <string name="nombre_empleado">Nombre: </string>
    <string name="hint_nombre">Ingrese nombre de Empleado</string>
    <string name="hint_horas_normales">Horas normales trabajadas</string>
    <string name="hint_horas_extras">Horas extras trabajadas</string>

    <string name="puesto_1">Auxiliar</string>
    <string name="puesto_2">Albañil</string>
    <string name="puesto_3">Ing. obra</string>

    <string name="subtotal_default">Subtotal: $0.00</string>
    <string name="subtotal">Subtotal: $%.2f</string>
    <string name="impuesto_default">Impuesto: $0.00</string>
    <string name="impuesto">Impuesto: $%.2f</string>
    <string name="total_default">Total: $0.00</string>
    <string name="total">Total: $%.2f</string>

    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="regresar">Regresar</string>
    <string name="sslir">Salir</string>

    <string name="error_calculo">Error en los datos ingresados</string>

    <string name="hint_numero">Número de empleado</string>
    <string name="hint_nombre_empl">Nombre del empleado</string>
    <string name="entrar">Entrar</string>

    <string name="confirmar_cierre">¿Está seguro que desea salir?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cancelado">Operación cancelada</string>
    <string name="plazos">Puestos</string>
</resources>